1.3.3
	+ Bugfix: Do not show graphs if the module is not configured
1.1.10
	+ Bugfix: Monitor graph updates don't glitch anymore
	+ Bugfix: Set a fixed hostname in order not to let collectd daemon
	to search for hostname on its own
1.1.0
	+ Initial release