@@ -1,3 +1,5 @@
+HEAD
+	+ Bugfix: Df measure shows free and used correctly, they were swapt
 1.3.3
 	+ Bugfix: Do not show graphs if the module is not configured
 1.1.10
